--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,8 @@ include ':app'
 include ':hook'
 include ':tvbus'
 include ':catvod'
+include ':pyramid'
+include ':danmaku'
 include ':quickjs'
 include ':thunder'
 include ':jianpian'
